l'oiseau vole peu a peu

--- a/apropos.html
+++ b/apropos.html
@@ -1,73 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A propos</title>
-     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div>
         <header class="header">
             <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
-           <nav>
-    <ul class="menu">
-         <li class="dropdown">
-            <a href="destination.html">Destinations</a>
-            <ul class="submenu">
-                <li><a href="#">Conakry</a></li>
-                <li><a href="#">Kérouané</a></li>
-                <li><a href="#">Kindia</a></li>
-                <li><a href="#">Labé</a></li>
-            </ul>
-        </li>
-        <li class="dropdown">
-            <a href="apropos.html">A propos</a>
-            <ul class="submenu">
-                <li><a href="#">PDG</a></li>
-                <li><a href="#">DG</a></li>
-                <li><a href="#">L'équipe</a></li>
-            </ul>
-        </li>
-        <li class="dropdown">
-            <a href="services.html">Services</a>
-            <ul class="submenu">
-                <li><a href="#">Santé</a></li>
-                <li><a href="#">Sécurité</a></li>
-                <li><a href="#">Assurances</a></li>
-            </ul>
-        </li>
-         <li class="dropdown">
-            <a href="contact.html">Contact</a>
-            <ul class="submenu">
-                <li><a href="#">+224 11 11</a></li>
-                <li><a href="#">+223 22 22</a></li>
-                <li><a href="#">+221 33 33</a></li>
-            </ul>
-        </li>
-    </ul>
-    <form class="search-bar" action="#" method="get">
-        <input type="text" name="q" placeholder="Rechercher...">
-        <button type="submit">🔍</button>
-    </form>
-    <select class="lang-switcher">
-    <option value="fr">Fr</option>
-    <option value="en">En</option>
-    <option value="es">Es</option>
-</select>
-</nav>
+            <nav>
+                <ul class="menu">
+                    <li class="dropdown">
+                        <a href="destination.html">Destinations</a>
+                        <ul class="submenu">
+                            <li><a href="#">Conakry</a></li>
+                            <li><a href="#">Kérouané</a></li>
+                            <li><a href="#">Kindia</a></li>
+                            <li><a href="#">Labé</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="apropos.html">A propos</a>
+                        <ul class="submenu">
+                            <li><a href="#">PDG</a></li>
+                            <li><a href="#">DG</a></li>
+                            <li><a href="#">L'équipe</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="services.html">Services</a>
+                        <ul class="submenu">
+                            <li><a href="#">Santé</a></li>
+                            <li><a href="#">Sécurité</a></li>
+                            <li><a href="#">Assurances</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="contact.html">Contact</a>
+                        <ul class="submenu">
+                            <li><a href="#">+224 11 11</a></li>
+                            <li><a href="#">+223 22 22</a></li>
+                            <li><a href="#">+221 33 33</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="search-bar" action="#" method="get">
+                    <input type="text" name="q" placeholder="Rechercher...">
+                    <button type="submit">🔍</button>
+                </form>
+                <select class="lang-switcher">
+                    <option value="fr">Fr</option>
+                    <option value="en">En</option>
+                    <option value="es">Es</option>
+                </select>
+            </nav>
         </header>
     </div>
-        <section class="about-section">
+    <section class="about-section">
         <h1>À propos de Nimba Guinée</h1>
         <div class="about-content">
             <div class="about-text">
                 <p>
-                    <strong>Nimba Guinée</strong> est une plateforme dédiée à la valorisation de la Guinée, de ses richesses naturelles, culturelles et humaines. 
-                    Fondée par des passionnés du pays, notre mission est de faire découvrir la Guinée authentique, de promouvoir ses destinations, ses talents et ses initiatives.
+                    <strong>Nimba Guinée</strong> est une plateforme dédiée à la valorisation de la Guinée, de ses
+                    richesses naturelles, culturelles et humaines.
+                    Fondée par des passionnés du pays, notre mission est de faire découvrir la Guinée authentique, de
+                    promouvoir ses destinations, ses talents et ses initiatives.
                 </p>
                 <p>
-                    Nous croyons en une Guinée ouverte, dynamique et fière de ses racines. À travers nos services, nos articles et nos actions, nous souhaitons inspirer, informer et connecter tous ceux qui aiment la Guinée ou souhaitent la découvrir.
+                    Nous croyons en une Guinée ouverte, dynamique et fière de ses racines. À travers nos services, nos
+                    articles et nos actions, nous souhaitons inspirer, informer et connecter tous ceux qui aiment la
+                    Guinée ou souhaitent la découvrir.
                 </p>
             </div>
             <div class="about-img">
@@ -94,15 +100,15 @@
             <a href="contact.html">Contactez-nous</a>
         </div>
     </section>
-            <div class="destinatiion">
-                <a href="#"><img src="images/Naby Moussa.jpg" alt="PDG" style="height: 245px" ; width="315px"></a>
-                <a href="#"><img src="images/sira.jpg" alt="DG" style="height: 245px" ; width="315px"></a>
-                <a href="#"><img src="images/equipe.jpg" alt="équipe" style="height: 245px" ; width="315px"></a>
-            </div> <br><br><br>
-            </div>
-        </div>
-            </div>
-        </main>
+    <div class="destinatiion">
+        <a href="#"><img src="images/Naby Moussa.jpg" alt="PDG" style="height: 245px" ; width="315px"></a>
+        <a href="#"><img src="images/sira.jpg" alt="DG" style="height: 245px" ; width="315px"></a>
+        <a href="#"><img src="images/equipe.jpg" alt="équipe" style="height: 245px" ; width="315px"></a>
+    </div> <br><br><br>
+    </div>
+    </div>
+    </div>
+    </main>
     <footer class="footer">
         <div>
             <a href="index.html"><img src="images/logoo.png" alt="logo"></a>
@@ -119,12 +125,12 @@
         </div>
         <div>
             <h2 class="footer-titre">Notre équipe</h2>
-         <ul>
-            <li>Mansa Moussa</li>
-            <li>Fodé Dounoh</li>
-            <li>Naby Moussa </li>
-            <li>Sidafa Doura</li>
-        </ul>
+            <ul>
+                <li>Mansa Moussa</li>
+                <li>Fodé Dounoh</li>
+                <li>Naby Moussa </li>
+                <li>Sidafa Doura</li>
+            </ul>
         </div>
         <div>
             <h2 class="footer-titre">Liens important</h2>
@@ -137,4 +143,5 @@
         </div>
     </footer>
 </body>
+
 </html>
