--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div>
         <header class="header">
             <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
-             
-           <nav>
-    <ul class="menu">
-         <li class="dropdown">
-            <a href="destination.html">Destinations</a>
-            <ul class="submenu">
-                <li><a href="#">Conakry</a></li>
-                <li><a href="#">Kérouané</a></li>
-                <li><a href="#">Kindia</a></li>
-                <li><a href="#">Labé</a></li>
-            </ul>
-        </li>
-        <li class="dropdown">
-            <a href="apropos.html">A propos</a>
-            <ul class="submenu">
-                <li><a href="#">PDG</a></li>
-                <li><a href="#">DG</a></li>
-                <li><a href="#">L'équipe</a></li>
-            </ul>
-        </li>
-        <li class="dropdown">
-            <a href="services.html">Services</a>
-            <ul class="submenu">
-                <li><a href="#">Santé</a></li>
-                <li><a href="#">Sécurité</a></li>
-                <li><a href="#">Assurances</a></li>
-            </ul>
-        </li>
-         <li class="dropdown">
-            <a href="contact.html">Contact</a>
-            <ul class="submenu">
-                <li><a href="#">+224 11 11</a></li>
-                <li><a href="#">+223 22 22</a></li>
-                <li><a href="#">+221 33 33</a></li>
-            </ul>
-        </li>
-    </ul>
-    <form class="search-bar" action="#" method="get">
-        <input type="text" name="q" placeholder="Rechercher...">
-        <button type="submit">🔍</button>
-    </form>
-    <select class="lang-switcher">
-    <option value="fr">Fr</option>
-    <option value="en">En</option>
-    <option value="es">Es</option>
-</select>
-</nav>
+
+            <nav>
+                <ul class="menu">
+                    <li class="dropdown">
+                        <a href="destination.html">Destinations</a>
+                        <ul class="submenu">
+                            <li><a href="#">Conakry</a></li>
+                            <li><a href="#">Kérouané</a></li>
+                            <li><a href="#">Kindia</a></li>
+                            <li><a href="#">Labé</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="apropos.html">A propos</a>
+                        <ul class="submenu">
+                            <li><a href="#">PDG</a></li>
+                            <li><a href="#">DG</a></li>
+                            <li><a href="#">L'équipe</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="services.html">Services</a>
+                        <ul class="submenu">
+                            <li><a href="#">Santé</a></li>
+                            <li><a href="#">Sécurité</a></li>
+                            <li><a href="#">Assurances</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="contact.html">Contact</a>
+                        <ul class="submenu">
+                            <li><a href="#">+224 11 11</a></li>
+                            <li><a href="#">+223 22 22</a></li>
+                            <li><a href="#">+221 33 33</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="search-bar" action="#" method="get">
+                    <input type="text" name="q" placeholder="Rechercher...">
+                    <button type="submit">🔍</button>
+                </form>
+                <select class="lang-switcher">
+                    <option value="fr">Fr</option>
+                    <option value="en">En</option>
+                    <option value="es">Es</option>
+                </select>
+            </nav>
 
         </header>
-       
+
     </div>
     <div class="formulaire">
         <form action="#" method="post">
@@ -82,13 +84,17 @@
             </div>
             <div class="form-group">
                 <label for="message">Message</label>
-                <textarea name="message" id="message" rows="4" required placeholder="Nous sommes satisfait du service rendu, merci a l'équipe"></textarea>
+                <textarea name="message" id="message" rows="4" required
+                    placeholder="Nous sommes satisfait du service rendu, merci a l'équipe"></textarea>
             </div>
             <button type="submit" class="btn">Envoyer</button>
             <div class="social-icons">
-                 <a href="#" target="_blank"><img src="images/facebook-logo.png" alt="Facebook" style="height: 55px"; width="65px" /></a>
-                 <a href="#" target="_blank"><img src="images/logo-twitter.png" alt="Twitter" style="height: 55px"; width="65px"/></a>
-                 <a href="#" target="_blank"><img src="images/logo-insta.jpg" alt="Instagram" style="height: 55px"; width="65px"/></a>
+                <a href="#" target="_blank"><img src="images/facebook-logo.png" alt="Facebook" style="height: 55px" ;
+                        width="65px" /></a>
+                <a href="#" target="_blank"><img src="images/logo-twitter.png" alt="Twitter" style="height: 55px" ;
+                        width="65px" /></a>
+                <a href="#" target="_blank"><img src="images/logo-insta.jpg" alt="Instagram" style="height: 55px" ;
+                        width="65px" /></a>
             </div>
         </form>
     </div>
@@ -108,12 +114,12 @@
         </div>
         <div>
             <h2 class="footer-titre">Notre équipe</h2>
-         <ul>
-            <li>Mansa Moussa</li>
-            <li>Fodé Dounoh</li>
-            <li>Naby Moussa </li>
-            <li>Sidafa Doura</li>
-        </ul>
+            <ul>
+                <li>Mansa Moussa</li>
+                <li>Fodé Dounoh</li>
+                <li>Naby Moussa </li>
+                <li>Sidafa Doura</li>
+            </ul>
         </div>
         <div>
             <h2 class="footer-titre">Liens important</h2>
@@ -126,4 +132,5 @@
         </div>
     </footer>
 </body>
+
 </html>
