--- a/destination.html
+++ b/destination.html
@@ -1,83 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destinations</title>
-     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div>
         <header class="header">
             <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
-           <nav>
+            <nav>
                 <ul class="menu">
-         <li class="dropdown">
-            <a href="destination.html">Destinations</a>
-            <ul class="submenu">
-                <li><a href="#">Conakry</a></li>
-                <li><a href="#">Kérouané</a></li>
-                <li><a href="#">Kindia</a></li>
-                <li><a href="#">Labé</a></li>
-            </ul>
-        </li>
-        <li class="dropdown">
-            <a href="apropos.html">A propos</a>
-            <ul class="submenu">
-                <li><a href="#">PDG</a></li>
-                <li><a href="#">DG</a></li>
-                <li><a href="#">L'équipe</a></li>
-            </ul>
-        </li>
-        <li class="dropdown">
-            <a href="services.html">Services</a>
-            <ul class="submenu">
-                <li><a href="#">Santé</a></li>
-                <li><a href="#">Sécurité</a></li>
-                <li><a href="#">Assurances</a></li>
-            </ul>
-        </li>
-         <li class="dropdown">
-            <a href="contact.html">Contact</a>
-            <ul class="submenu">
-                <li><a href="#">+224 11 11</a></li>
-                <li><a href="#">+223 22 22</a></li>
-                <li><a href="#">+221 33 33</a></li>
-            </ul>
-        </li>
-    </ul>
-    <form class="search-bar" action="#" method="get">
-        <input type="text" name="q" placeholder="Rechercher...">
-        <button type="submit">🔍</button>
-    </form>
-    <select class="lang-switcher">
-    <option value="fr">Fr</option>
-    <option value="en">En</option>
-    <option value="es">Es</option>
-</select>
-           </nav>
+                    <li class="dropdown">
+                        <a href="destination.html">Destinations</a>
+                        <ul class="submenu">
+                            <li><a href="#">Conakry</a></li>
+                            <li><a href="#">Kérouané</a></li>
+                            <li><a href="#">Kindia</a></li>
+                            <li><a href="#">Labé</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="apropos.html">A propos</a>
+                        <ul class="submenu">
+                            <li><a href="#">PDG</a></li>
+                            <li><a href="#">DG</a></li>
+                            <li><a href="#">L'équipe</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="services.html">Services</a>
+                        <ul class="submenu">
+                            <li><a href="#">Santé</a></li>
+                            <li><a href="#">Sécurité</a></li>
+                            <li><a href="#">Assurances</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="contact.html">Contact</a>
+                        <ul class="submenu">
+                            <li><a href="#">+224 11 11</a></li>
+                            <li><a href="#">+223 22 22</a></li>
+                            <li><a href="#">+221 33 33</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="search-bar" action="#" method="get">
+                    <input type="text" name="q" placeholder="Rechercher...">
+                    <button type="submit">🔍</button>
+                </form>
+                <select class="lang-switcher">
+                    <option value="fr">Fr</option>
+                    <option value="en">En</option>
+                    <option value="es">Es</option>
+                </select>
+            </nav>
         </header>
 
     </div>
-        <section class="dest-page-section">
+    <section class="dest-page-section">
         <h1>Nos Destinations</h1>
         <div class="dest-grid">
             <div class="dest-card">
                 <img src="images/27.jpg" alt="Kankan">
                 <h2>Kankan</h2>
-                <p>La plus grande région de Guinée, réputée pour son histoire, ses marchés animés et ses paysages de savane.</p>
+                <p>La plus grande région de Guinée, réputée pour son histoire, ses marchés animés et ses paysages de
+                    savane.</p>
                 <a href="#">Découvrir</a>
             </div>
             <div class="dest-card">
                 <img src="images/6.jpg" alt="Mandiana">
                 <h2>Mandiana</h2>
-                <p>Terre d’or et de traditions, Mandiana séduit par ses villages authentiques et ses fêtes culturelles.</p>
+                <p>Terre d’or et de traditions, Mandiana séduit par ses villages authentiques et ses fêtes culturelles.
+                </p>
                 <a href="#">Découvrir</a>
             </div>
             <div class="dest-card">
                 <img src="images/13.jpg" alt="Yomou">
                 <h2>Yomou</h2>
-                <p>Au cœur de la Guinée forestière, Yomou offre une nature luxuriante et une grande diversité ethnique.</p>
+                <p>Au cœur de la Guinée forestière, Yomou offre une nature luxuriante et une grande diversité ethnique.
+                </p>
                 <a href="#">Découvrir</a>
             </div>
             <div class="dest-card">
@@ -106,10 +111,10 @@
             </div>
         </div>
     </section>
-            </div>
-        </div>
-            </div>
-        </main>
+    </div>
+    </div>
+    </div>
+    </main>
     <footer class="footer">
         <div>
             <a href="index.html"><img src="images/logoo.png" alt="logo"></a>
@@ -119,20 +124,20 @@
         <div>
             <h2 class="footer-titre">Contact</h2>
             <ul>
-               <li>Tel:</li>
+                <li>Tel:</li>
                 <li>+224 620 33 49 38</li>
                 <li>+224 666 42 57 59</li>
             </ul>
         </div>
         <div>
             <h2 class="footer-titre">Notre équipe</h2>
-         <ul>
-            <li>Mansa Moussa</li>
-            <li>Fodé Dounoh</li>
-            <li>Naby Moussa </li>
-            <li>Sidafa Doura</li>
-            <li>Chatgpt</li>
-        </ul>
+            <ul>
+                <li>Mansa Moussa</li>
+                <li>Fodé Dounoh</li>
+                <li>Naby Moussa </li>
+                <li>Sidafa Doura</li>
+                <li>Chatgpt</li>
+            </ul>
         </div>
         <div>
             <h2 class="footer-titre">Liens important</h2>
@@ -145,4 +150,5 @@
         </div>
     </footer>
 </body>
+
 </html>
