--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,77 +8,91 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
     <header class="header">
-        <a href="index.html"><img src="images/logoo.png" alt="Logo Nimba Guinée" style="height: 65px; width: 115px;"></a>
+        <a href="index.html"><img src="images/logoo.png" alt="Logo Nimba Guinée"
+                style="height: 65px; width: 115px;"></a>
         <nav>
-        <ul class="menu">
-         <li class="dropdown">
-            <a href="destination.html">Destinations</a>
-            <ul class="submenu">
-                <li><a href="#">Conakry</a></li>
-                <li><a href="#">Kérouané</a></li>
-                <li><a href="#">Kindia</a></li>
-                <li><a href="#">Labé</a></li>
+            <ul class="menu">
+                <li class="dropdown">
+                    <a href="destination.html">Destinations</a>
+                    <ul class="submenu">
+                        <li><a href="#">Conakry</a></li>
+                        <li><a href="#">Kérouané</a></li>
+                        <li><a href="#">Kindia</a></li>
+                        <li><a href="#">Labé</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="apropos.html">A propos</a>
+                    <ul class="submenu">
+                        <li><a href="#">PDG</a></li>
+                        <li><a href="#">DG</a></li>
+                        <li><a href="#">L'équipe</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="services.html">Services</a>
+                    <ul class="submenu">
+                        <li><a href="#">Santé</a></li>
+                        <li><a href="#">Sécurité</a></li>
+                        <li><a href="#">Assurances</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="contact.html">Contact</a>
+                    <ul class="submenu">
+                        <li><a href="#">+224 11 11</a></li>
+                        <li><a href="#">+223 22 22</a></li>
+                        <li><a href="#">+221 33 33 33</a></li>
+                    </ul>
+                </li>
             </ul>
-        </li>
-        <li class="dropdown">
-            <a href="apropos.html">A propos</a>
-            <ul class="submenu">
-                <li><a href="#">PDG</a></li>
-                <li><a href="#">DG</a></li>
-                <li><a href="#">L'équipe</a></li>
-            </ul>
-        </li>
-        <li class="dropdown">
-            <a href="services.html">Services</a>
-            <ul class="submenu">
-                <li><a href="#">Santé</a></li>
-                <li><a href="#">Sécurité</a></li>
-                <li><a href="#">Assurances</a></li>
-            </ul>
-        </li>
-         <li class="dropdown">
-            <a href="contact.html">Contact</a>
-            <ul class="submenu">
-                <li><a href="#">+224 11 11</a></li>
-                <li><a href="#">+223 22 22</a></li>
-                <li><a href="#">+221 33 33 33</a></li>
-            </ul>
-        </li>
-    </ul>
-    <form class="search-bar" action="#" method="get">
-        <input type="text" name="q" placeholder="Rechercher...">
-        <button type="submit">🔍</button>
-    </form>
-    <select class="lang-switcher">
-    <option value="fr">Fr</option>
-    <option value="en">En</option>
-    <option value="es">Es</option>
-</select>
-</nav>
+            <form class="search-bar" action="#" method="get">
+                <input type="text" name="q" placeholder="Rechercher...">
+                <button type="submit">🔍</button>
+            </form>
+            <select class="lang-switcher">
+                <option value="fr">Fr</option>
+                <option value="en">En</option>
+                <option value="es">Es</option>
+            </select>
+        </nav>
     </header>
     <div class=" img">
-       <!-- <p>#Paradis</p> <br>
+        <!-- <p>#Paradis</p> <br>
        <P>#Paradis</P><br>
        <p>#Paradis</p><br> -->
     </div>
     </div>
-     <div class="guinea">
+    <div class="guinea">
         <div>
             <div>
-        <h2>La Guinée, le cœur vibrant de l’Afrique de l’Ouest</h2>
-        <p>
-            Nichée sur la côte atlantique de l’Afrique de l’Ouest, la Guinée est un pays riche en ressources, en culture et en diversité. <br> De ses plages dorées aux forêts tropicales profondes, en passant par les hautes terres du Fouta Djalon, <br> la Guinée offre un paysage d’une beauté saisissante et d’une grande variété. <br>
-            Berceau de traditions ancestrales et de rythmes envoutants, la Guinée est aussi la terre de Sekou Touré, <br> figure historique de l’indépendance africaine. Elle est le foyer d’une mosaïque de peuples <br> – Malinkés, Peuls, Soussous, et bien d'autres – dont les cultures se croisent et s'enrichissent mutuellement. <br> La musique y tient une place essentielle, avec des instruments emblématiques comme le balafon, la kora et le djembé, qui font vibrer les cœurs bien au-delà de ses frontières. <br>
-            Pays de l’hospitalité et de la chaleur humaine, la Guinée séduit par l’authenticité de ses traditions, la richesse de ses terres et la force de son peuple. C’est une nation jeune, fière et pleine de potentiel, tournée vers l’avenir tout en étant profondément attachée à son histoire.
-            La Guinée n’est pas seulement un pays : c’est une identité, une énergie, un espoir. <br> Une invitation à découvrir l’Afrique vraie, celle qui respire par ses peuples, ses couleurs, <br> ses sons et ses sourires.</p>
-     </div>
-     <div>
-        <img src="images/guinea-removebg-preview.png" alt="" style="width: 725px;" height="855px;">
-     </div>
+                <h2>La Guinée, le cœur vibrant de l’Afrique de l’Ouest</h2>
+                <p>
+                    Nichée sur la côte atlantique de l’Afrique de l’Ouest, la Guinée est un pays riche en ressources, en
+                    culture et en diversité. <br> De ses plages dorées aux forêts tropicales profondes, en passant par
+                    les hautes terres du Fouta Djalon, <br> la Guinée offre un paysage d’une beauté saisissante et d’une
+                    grande variété. <br>
+                    Berceau de traditions ancestrales et de rythmes envoutants, la Guinée est aussi la terre de Sekou
+                    Touré, <br> figure historique de l’indépendance africaine. Elle est le foyer d’une mosaïque de
+                    peuples <br> – Malinkés, Peuls, Soussous, et bien d'autres – dont les cultures se croisent et
+                    s'enrichissent mutuellement. <br> La musique y tient une place essentielle, avec des instruments
+                    emblématiques comme le balafon, la kora et le djembé, qui font vibrer les cœurs bien au-delà de ses
+                    frontières. <br>
+                    Pays de l’hospitalité et de la chaleur humaine, la Guinée séduit par l’authenticité de ses
+                    traditions, la richesse de ses terres et la force de son peuple. C’est une nation jeune, fière et
+                    pleine de potentiel, tournée vers l’avenir tout en étant profondément attachée à son histoire.
+                    La Guinée n’est pas seulement un pays : c’est une identité, une énergie, un espoir. <br> Une
+                    invitation à découvrir l’Afrique vraie, celle qui respire par ses peuples, ses couleurs, <br> ses
+                    sons et ses sourires.</p>
+            </div>
+            <div>
+                <img src="images/guinee-images-removebg-preview.png" alt="" style="width: 725px;" height="855px;">
+            </div>
         </div>
-     </div>
+    </div>
     <main class="main">
         <section class="hero">
             <h1>Bienvenue sur Nimba Guinée</h1>
@@ -86,94 +101,138 @@
 
         <section class="articles">
             <article>
-                <img src="images/3.jpg" alt="Paysage de Guinée" style="height: 75px; width: 125px; border-radius: 25px;">
+                <img src="images/3.jpg" alt="Paysage de Guinée"
+                    style="height: 75px; width: 125px; border-radius: 25px;">
                 <h2>Les chemins de la Guinée</h2>
-                <p>Située à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857 km²... (texte résumé)</p>
+                <p>Située à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857
+                    km²... (texte résumé)</p>
             </article>
             <article>
                 <img src="images/2.jpg" alt="Profil Guinée" style="height: 75px; width: 125px; border-radius: 25px;">
                 <h2>Nature & Culture</h2>
-                <p>Nature, culture, diversité et philosophies authentiques fondent la Guinée. Quatre mondes y sont réunis... (texte résumé)</p>
+                <p>Nature, culture, diversité et philosophies authentiques fondent la Guinée. Quatre mondes y sont
+                    réunis... (texte résumé)</p>
             </article>
         </section>
         <section class="actus">
             <h2>À la une</h2>
             <div class="actus-list">
                 <article>
-                <h3>Le retour de Mansa Moussa au Pays</h3>
-                <p>Après une longue période a la Recherche du savoir, le jeune fait finalement son retour en ville</p>
-                <a href="#">Lire plus</a>
+                    <h3>Le retour de Mansa Moussa au Pays</h3>
+                    <p>Après une longue période a la Recherche du savoir, le jeune fait finalement son retour en ville
+                    </p>
+                    <a href="#">Lire plus</a>
                 </article>
                 <article>
-                <h3>Avènement de la grande fête</h3>
-                <p>C'est l'heure, nos routes sont encombrées, plus de voyageurs que prévus. Quand c'est la fête il faut y aller</p>
-                <a href="#">Lire plus</a>
+                    <h3>Avènement de la grande fête</h3>
+                    <p>C'est l'heure, nos routes sont encombrées, plus de voyageurs que prévus. Quand c'est la fête il
+                        faut y aller</p>
+                    <a href="#">Lire plus</a>
                 </article>
                 <article>
-                <h3>Edhi le héros du jour</h3>
-                <p>Le jeune Edhi sauveur de toute une nation, le peuple te dit merci Edhi</p>
-                <a href="#">Lire plus</a>
+                    <h3>Edhi le héros du jour</h3>
+                    <p>Le jeune Edhi sauveur de toute une nation, le peuple te dit merci Edhi</p>
+                    <a href="#">Lire plus</a>
                 </article>
                 <article>
-                <h3>Festival des Arts de Conakry</h3>
-                <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
-                <a href="#">Lire plus</a>
+                    <h3>Festival des Arts de Conakry</h3>
+                    <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
+                    <a href="#">Lire plus</a>
                 </article>
                 <!-- Ajoute d'autres articles -->
             </div>
         </section>
         <section class="partenaires">
-  <h2>Nos partenaires</h2>
-  <div class="partenaires-list">
-    <img src="images/Naby Moussa.jpg" alt="Partenaire 1">
-    <img src="images/Ansou.jpeg" alt="Partenaire 2">
-    <img src="images/Edhi.jpg" alt="Partenaire 3">
+            <h2>Nos partenaires</h2>
+            <div class="partenaires-list">
+                <img src="images/Naby Moussa.jpg" alt="Partenaire 1">
+                <img src="images/Ansou.jpeg" alt="Partenaire 2">
+                <img src="images/Edhi.jpg" alt="Partenaire 3">
+            </div>
+        </section>
+        <section class="carte-guinee">
+            <h2>Où nous trouver ?</h2>
+            <img src="images/guinea-removebg-preview.png" alt="Carte de la Guinée"
+                style="max-width:100%;border-radius:12px;">
+        </section>
+        <section class="temoignages">
+            <h2>Ils parlent de nous</h2>
+            <div class="temoignages-list">
+                <blockquote>“Un site incontournable pour découvrir la Guinée !”<br><span>- Fatoumata D.</span>
+                </blockquote>
+                <blockquote>“Vous n'aurez pas de regret à naviguer sur ce site !”<br><span>- Naby Moussa.</span>
+                </blockquote>
+                <blockquote>“J'ai pas eu besoin qu'on me montre du doigt les endroits grâce à ce site !”<br><span>-
+                        Traoré Oumar.</span></blockquote>
+                <blockquote>“Je vous le conseille emblément !”<br><span>- Nagnouma Cheick.</span></blockquote>
+            </div>
+        </section>
+        <section class="galerie">
+  <h2>Galerie</h2>
+  <div class="galerie-carousel">
+    <div class="galerie-track">
+      <img src="images/mamans.jpg" alt="Paysage 1">
+      <img src="images/pecheur.jpg" alt="Paysage 2">
+      <img src="images/danseur.jpg" alt="Paysage 3">
+      <img src="images/recolte.jpg" alt="Paysage 4">
+      <img src="images/denses.jpg" alt="Paysage 5">
+      <img src="images/agric.jpg" alt="Paysage 6">
+      <img src="images/Marre.jpg" alt="Paysage 7">
+      <img src="images/pêcheur.jpg" alt="Paysage 8">
+      <img src="images/pont.avif" alt="paysage">
+      <img src="images/arbre.avif" alt="paysage">
+      <img src="images/mer.jpg" alt="paysage">
+      <img src="images/vieux.avif" alt="paysage">
+      <img src="images/soleil.jpg" alt="soleil">
+      <img src="images/matin.avif" alt="paysage">
+      <img src="images/mont.jpg" alt="paysage">
+
+      
+    </div>
   </div>
 </section>
-<section class="carte-guinee">
-  <h2>Où nous trouver ?</h2>
-  <img src="images/guinea-removebg-preview.png" alt="Carte de la Guinée" style="max-width:100%;border-radius:12px;">
+<section class="avis">
+  <h2>Laissez votre avis</h2>
+  <form class="avis-form">
+    <input type="text" name="nom" placeholder="Votre nom" required>
+    <textarea name="commentaire" placeholder="Votre avis..." required></textarea>
+    <button type="submit" disabled>Envoyer (démo)</button>
+    <p class="info-avis">* Fonctionnalité démo, vos avis ne seront pas enregistrés.</p>
+  </form>
 </section>
-       <section class="temoignages">
-  <h2>Ils parlent de nous</h2>
-  <div class="temoignages-list">
-    <blockquote>“Un site incontournable pour découvrir la Guinée !”<br><span>- Fatoumata D.</span></blockquote>
-    <blockquote>“Vous n'aurez pas de regret à naviguer sur ce site !”<br><span>- Naby Moussa.</span></blockquote>
-    <blockquote>“J'ai pas eu besoin qu'on me montre du doigt les endroits grâce à ce site !”<br><span>- Traoré Oumar.</span></blockquote>
-    <blockquote>“Je vous le conseille emblément !”<br><span>- Nagnouma Cheick.</span></blockquote>
-  </div>
-</section>
-        <form class="newsletter">
-            <label for="email">Recevez nos actus :</label>
-            <input type="email" id="email" placeholder="Votre email">
-            <button type="submit">S'inscrire</button>
-        </form>
+<form class="newsletter">
+    <h2>Inscrivez-vous à la newsletter</h2>
+    <p class="newsletter-desc">Recevez chaque mois nos actualités, bons plans et découvertes sur la Guinée directement dans votre boîte mail.</p>
+    <label for="email">Votre email :</label>
+    <input type="email" id="email" placeholder="Votre email">
+    <button type="submit" onclick="alert('Merci pour votre inscription !'); return false;">S'inscrire</button>
+</form>
         <section class="guinea-info-bar">
-    <div class="info-item">
-        <i class="fas fa-city info-icon"></i>
-        <span class="info-value">Conakry</span>
-    </div>
-    <div class="info-item">
-        <i class="fas fa-users info-icon"></i>
-        <span class="info-value">~14 millions</span>
-    </div>
-    <div class="info-item">
-        <i class="fas fa-map info-icon"></i>
-        <span class="info-value">245 857 km²</span>
-    </div>
-    <div class="info-item">
-        <i class="fas fa-coins info-icon"></i>
-        <span class="info-value">~17,5 Mds $ (2023)</span>
-    </div>
-    <div class="info-item">
-        <i class="fas fa-language info-icon"></i>
-        <span class="info-value">Français</span>
-    </div>
-    <div class="info-item">
-        <i class="fas fa-money-bill-wave info-icon"></i>
-        <span class="info-value">Franc guinéen (GNF)</span>
-    </div>
-</section>
+            <div class="info-item">
+                <i class="fas fa-city info-icon"></i>
+                <span class="info-value">Conakry</span>
+            </div>
+            <div class="info-item">
+                <i class="fas fa-users info-icon"></i>
+                <span class="info-value">~14 millions</span>
+            </div>
+            <div class="info-item">
+                <i class="fas fa-map info-icon"></i>
+                <span class="info-value">245 857 km²</span>
+            </div>
+            <div class="info-item">
+                <i class="fas fa-coins info-icon"></i>
+                <span class="info-value">~17,5 Mds $ (2023)</span>
+            </div>
+            <div class="info-item">
+                <i class="fas fa-language info-icon"></i>
+                <span class="info-value">Français</span>
+            </div>
+            <div class="info-item">
+                <i class="fas fa-money-bill-wave info-icon"></i>
+                <span class="info-value">Franc guinéen (GNF)</span>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
@@ -210,4 +269,21 @@
         </div>
     </footer>
 </body>
+<script>
+const track = document.querySelector('.galerie-track');
+const images = document.querySelectorAll('.galerie-track img');
+let index = 0;
+const visible = 4; // nombre d'images visibles à la fois (ajuste selon la taille)
+function slideGallery() {
+    index++;
+    if(index > images.length - visible) index = 0;
+    track.style.transform = `translateX(-${index * (images[0].offsetWidth + 18)}px)`;
+}
+let interval = setInterval(slideGallery, 2200);
+
+// Pause au survol
+track.addEventListener('mouseenter', () => clearInterval(interval));
+track.addEventListener('mouseleave', () => interval = setInterval(slideGallery, 2200));
+</script>
+
 </html>
