--- a/services.html
+++ b/services.html
@@ -1,121 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div>
         <header class="header">
             <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
             <nav>
-            <ul class="menu">
-             <li class="dropdown">
-            <a href="destination.html">Destinations</a>
-            <ul class="submenu">
-                <li><a href="#">Conakry</a></li>
-                <li><a href="#">Kérouané</a></li>
-                <li><a href="#">Kindia</a></li>
-                <li><a href="#">Labé</a></li>
-            </ul>
-        </li>
-        <li class="dropdown">
-            <a href="apropos.html">A propos</a>
-            <ul class="submenu">
-                <li><a href="#">PDG</a></li>
-                <li><a href="#">DG</a></li>
-                <li><a href="#">L'équipe</a></li>
-            </ul>
-        </li>
-        <li class="dropdown">
-            <a href="services.html">Services</a>
-            <ul class="submenu">
-                <li><a href="#">Santé</a></li>
-                <li><a href="#">Sécurité</a></li>
-                <li><a href="#">Assurances</a></li>
-            </ul>
-        </li>
-         <li class="dropdown">
-            <a href="contact.html">Contact</a>
-            <ul class="submenu">
-                <li><a href="#">+224 11 11</a></li>
-                <li><a href="#">+223 22 22</a></li>
-                <li><a href="#">+221 33 33</a></li>
-            </ul>
-        </li>
-    </ul>
-    <form class="search-bar" action="#" method="get">
-        <input type="text" name="q" placeholder="Rechercher...">
-        <button type="submit">🔍</button>
-    </form>
-    <select class="lang-switcher">
-    <option value="fr">Fr</option>
-    <option value="en">En</option>
-    <option value="es">Es</option>
-</select>
-</nav>
+                <ul class="menu">
+                    <li class="dropdown">
+                        <a href="destination.html">Destinations</a>
+                        <ul class="submenu">
+                            <li><a href="#">Conakry</a></li>
+                            <li><a href="#">Kérouané</a></li>
+                            <li><a href="#">Kindia</a></li>
+                            <li><a href="#">Labé</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="apropos.html">A propos</a>
+                        <ul class="submenu">
+                            <li><a href="#">PDG</a></li>
+                            <li><a href="#">DG</a></li>
+                            <li><a href="#">L'équipe</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="services.html">Services</a>
+                        <ul class="submenu">
+                            <li><a href="#">Santé</a></li>
+                            <li><a href="#">Sécurité</a></li>
+                            <li><a href="#">Assurances</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="contact.html">Contact</a>
+                        <ul class="submenu">
+                            <li><a href="#">+224 11 11</a></li>
+                            <li><a href="#">+223 22 22</a></li>
+                            <li><a href="#">+221 33 33</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="search-bar" action="#" method="get">
+                    <input type="text" name="q" placeholder="Rechercher...">
+                    <button type="submit">🔍</button>
+                </form>
+                <select class="lang-switcher">
+                    <option value="fr">Fr</option>
+                    <option value="en">En</option>
+                    <option value="es">Es</option>
+                </select>
+            </nav>
         </header>
         <section class="services-section">
-        <h1>Nos Services</h1>
-        <div class="services-list">
-            <div class="service-card">
-                <img src="images/docta.avif" alt="Santé">
-                <h2>Santé</h2>
-                <p>
-                    Un réseau national de centres de santé modernes, accessibles et équipés pour votre bien-être. Prévention, soins, maternité, pédiatrie et accompagnement personnalisé.
-                </p>
-                <a href="#">En savoir plus</a>
+            <h1>Nos Services</h1>
+            <div class="services-list">
+                <div class="service-card">
+                    <img src="images/docta.avif" alt="Santé">
+                    <h2>Santé</h2>
+                    <p>
+                        Un réseau national de centres de santé modernes, accessibles et équipés pour votre bien-être.
+                        Prévention, soins, maternité, pédiatrie et accompagnement personnalisé.
+                    </p>
+                    <a href="#">En savoir plus</a>
+                </div>
+                <div class="service-card">
+                    <img src="images/secu.avif" alt="Sécurité">
+                    <h2>Sécurité</h2>
+                    <p>
+                        Protection 24h/24 de vos biens, proches et activités. Agents formés, équipements modernes,
+                        audits gratuits et solutions sur mesure pour votre tranquillité.
+                    </p>
+                    <a href="#">En savoir plus</a>
+                </div>
+                <div class="service-card">
+                    <img src="images/assurance.avif" alt="Assurances">
+                    <h2>Assurances</h2>
+                    <p>
+                        Protégez votre santé, votre famille, vos biens et votre avenir avec nos formules flexibles et un
+                        accompagnement de confiance, partout en Guinée.
+                    </p>
+                    <a href="#">En savoir plus</a>
+                </div>
+                <div class="service-card">
+                    <img src="images/agric.jpg" alt="Santé">
+                    <h2>agriculture</h2>
+                    <p>
+                        L’agriculture en Guinée : un potentiel immense, des défis à relever
+                        L’agriculture occupe une place centrale dans l’économie guinéenne. Environ 70 % de la population
+                        active vit directement ou indirectement de l’agriculture, ce qui en fait un pilier essentiel du
+                        développement national.
+                        Grâce à un climat favorable, des terres fertiles et une diversité écologique remarquable, la
+                        Guinée dispose d’un immense potentiel agricole. </p>
+                    <a href="#">En savoir plus</a>
+                </div>
+                <div class="service-card">
+                    <img src="images/sport.jpg" alt="Santé">
+                    <h2>sport</h2>
+                    <p>Le sport en Guinée : passion populaire et vecteur d’unité nationale
+                        Le sport occupe une place importante dans la vie des Guinéens. Au-delà de l’aspect physique et
+                        récréatif,
+                        il est un véritable facteur d’unité nationale, de cohésion sociale et d’expression du talent de
+                        la jeunesse.
+                        Le sport le plus populaire en Guinée reste sans conteste le football,
+                        pratiqué dans toutes les régions du pays, aussi bien dans les rues que dans les stades.</p>
+                    <a href="#">En savoir plus</a>
+                </div>
+                <div class="service-card">
+                    <img src="images/educ.jpg" alt="Santé">
+                    <h2>Education</h2>
+                    <p>
+                        L’éducation en Guinée : un enjeu clé pour l’avenir
+                        L’éducation est l’un des piliers fondamentaux du développement d’une nation,
+                        et la Guinée en est pleinement consciente. Depuis l’indépendance, le pays a fait de l'accès à
+                        l'éducation une priorité,
+                        avec la volonté de former une jeunesse capable de relever les défis économiques, sociaux et
+                        culturels. </p>
+                    <a href="#">En savoir plus</a>
+                </div>
             </div>
-            <div class="service-card">
-                <img src="images/secu.avif" alt="Sécurité">
-                <h2>Sécurité</h2>
-                <p>
-                    Protection 24h/24 de vos biens, proches et activités. Agents formés, équipements modernes, audits gratuits et solutions sur mesure pour votre tranquillité.
-                </p>
-                <a href="#">En savoir plus</a>
-            </div>
-            <div class="service-card">
-                <img src="images/assurance.avif" alt="Assurances">
-                <h2>Assurances</h2>
-                <p>
-                    Protégez votre santé, votre famille, vos biens et votre avenir avec nos formules flexibles et un accompagnement de confiance, partout en Guinée.
-                </p>
-                <a href="#">En savoir plus</a>
-            </div>
-             <div class="service-card">
-                <img src="images/agric.jpg" alt="Santé">
-                <h2>agriculture</h2>
-                <p>
-                   L’agriculture en Guinée : un potentiel immense, des défis à relever
-                    L’agriculture occupe une place centrale dans l’économie guinéenne. Environ 70 % de la population
-                     active vit directement ou indirectement de l’agriculture, ce qui en fait un pilier essentiel du développement national.
-                     Grâce à un climat favorable, des terres fertiles et une diversité écologique remarquable, la Guinée dispose d’un immense potentiel agricole. </p>
-                <a href="#">En savoir plus</a>
-            </div>
-             <div class="service-card">
-                <img src="images/sport.jpg" alt="Santé">
-                <h2>sport</h2>
-                <p>Le sport en Guinée : passion populaire et vecteur d’unité nationale
-                    Le sport occupe une place importante dans la vie des Guinéens. Au-delà de l’aspect physique et récréatif, 
-                    il est un véritable facteur d’unité nationale, de cohésion sociale et d’expression du talent de la jeunesse.
-                 Le sport le plus populaire en Guinée reste sans conteste le football, 
-                    pratiqué dans toutes les régions du pays, aussi bien dans les rues que dans les stades.</p>
-                <a href="#">En savoir plus</a>
-            </div>
-             <div class="service-card">
-                <img src="images/educ.jpg" alt="Santé">
-                <h2>Education</h2>
-                <p>
-                    L’éducation en Guinée : un enjeu clé pour l’avenir
-                    L’éducation est l’un des piliers fondamentaux du développement d’une nation,
-                   et la Guinée en est pleinement consciente. Depuis l’indépendance, le pays a fait de l'accès à l'éducation une priorité,
-                    avec la volonté de former une jeunesse capable de relever les défis économiques, sociaux et culturels. </p>
-                <a href="#">En savoir plus</a>
-            </div>
-        </div>
-    </section>
+        </section>
     </div>
     <footer class="footer">
         <div>
@@ -133,12 +144,12 @@
         </div>
         <div>
             <h2 class="footer-titre">Notre équipe</h2>
-         <ul>
-            <li>Mansa Moussa</li>
-            <li>Fodé Dounoh</li>
-            <li>Naby Moussa </li>
-            <li>Sidafa Doura</li>
-        </ul>
+            <ul>
+                <li>Mansa Moussa</li>
+                <li>Fodé Dounoh</li>
+                <li>Naby Moussa </li>
+                <li>Sidafa Doura</li>
+            </ul>
         </div>
         <div>
             <h2 class="footer-titre">Liens important</h2>
@@ -151,4 +162,5 @@
         </div>
     </footer>
 </body>
+
 </html>
